--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,120 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.product-grid {
+  display: grid;
+  grid-template-rows: repeat(6, minmax(150px, 1fr));
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.product-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  height: 100%;
 }
+
+.product-item img {
+  width: 80%;
+  max-height: 70%;
+  object-fit: contain;
+}
+
+.product-item p {
+  margin: 0;
+  font-size: 14px;
+}
+
+.product-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.product-buttons button {
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.product-buttons .add-to-cart {
+  background-color: #007bff;
+  color: #fff;
+}
+
+.product-buttons .add-to-cart:hover {
+  background-color: #0062cc;
+}
+
+.product-buttons .delete {
+  background-color: #dc3545;
+  color: #fff;
+}
+
+.product-buttons .delete:hover {
+  background-color: #c82333;
+}
+ 
+
+/*navbar */ 
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  background-color: #007bff;
+  color: #fff;
+}
+
+.logo a {
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.cart-icon {
+  position: relative;
+  cursor: pointer;
+}
+
+.cart-icon i {
+  font-size: 1.5rem;
+}
+
+.cart-icon span {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: #fff;
+  color: #007bff;
+  font-size: 0.8rem;
+  font-weight: bold;
+}
+/* Carousel*/
+.carousel-container {
+  max-width: 600px; /* adjust the value to fit your needs */
+  margin: 0 auto; /* center the container horizontally */
+}
+
+.slick-slide img {
+  max-width: 100%; /* make sure images fit within the container */
+}
+
+
+/* update and add styling  */
+
